Fixed CSS to have "view" not covered by Bar. Changed initialization of Application. Moved all Classes to closure to have a possibility of delivering namespace (window currently) and delivering dependencies. Next: * Make "Application" as a Class that manage whole orchestra so assign listeners for events that modules can fire and fire events that modules can listen to. * Having that connect modules * Deliver HTML/CSS for Sarch and List views * Rename Views to Modules and have them in common namespace. Then split each inside into view / controller (model can stay as a pure json so far)

--- a/css/application.css
+++ b/css/application.css
@@ -28,9 +28,12 @@ ul {
 
 .view {
     /*background-color: red;*/
+    bottom: 44px;
     display: none;
-    height: 100%;
-    position: relative;
+    /*height: 100%;*/
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
 
 /*******************************************************************
@@ -71,7 +74,7 @@ ul {
 
 .map-control.move.bottom {
     background-position: 97px 0;
-    bottom: 50px;
+    bottom: 10px;
 }
 
 .map-control.move.left {
